--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script srcc="./script/aframe-ar.js"></script>
-    <script srcc="./script/aframe.min.js"></script>
+    <script srcc="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script srcc="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 </head>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
@@ -15,7 +15,7 @@
         <a-entity
         position="0 0 0"
         scale="0.05 0.05 0.05"
-        gltf-model="./assets/model.glb"
+        gltf-model="./model.glb"
         ></a-entity>
     </a-marker>
     <a-entity camera></a-entity>d 
