--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thunder</title>
-    <script srcc="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script srcc="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+    <!-- we import arjs version without NFT but with marker + location based support -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
@@ -18,7 +19,13 @@
         gltf-model="./model.glb"
         ></a-entity>
     </a-marker>
-    <a-entity camera></a-entity>d 
+    <a-entity camera></a-entity>
+    <a-entity
+        position="0 0 0"
+        scale="0.05 0.05 0.05"
+        gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+     ></a-entity>
     </a-scene>
 </body>
 </html>
+
