--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         position="0 0 0"
         scale="0.05 0.05 0.05"
         gltf-model="./model.gltf"
-        ></a-entity>
+        ></a-entity>testin
     </a-marker>
     <a-entity camera></a-entity>
     <a-entity
