--- a/index.html
+++ b/index.html
@@ -10,22 +10,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin : 1px;">
-    <a-scene embedded arjs>
-    <a-marker preset="hiro">
-        <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
-        <a-entity
-        position="0 0 0"
-        scale="0.05 0.05 0.05"
-        gltf-model="./model.gltf"
-        ></a-entity>testin
-    </a-marker>
-    <a-entity camera></a-entity>
-    <a-entity
-        position="0 0 0"
-        scale="0.05 0.05 0.05"
-        gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-     ></a-entity>
-    </a-scene>
+testing
 </body>
 </html>
 
