--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
-<body style="margin : 0px; overflow: hidden;">
+<body style="margin : 1px;">
     <a-scene embedded arjs>
     <a-marker preset="hiro">
         <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
