--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
-<body style="margin : 1px;">
-testing
+
+
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded arjs>
+      
+    <a-assets>
+        <a-asset-item id="tree" src="model.gltf"></a-asset-item>
+    </a-assets>
+
+    <a-entity gltf-model="##tree"></a-entity>
+
+    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+
+    <a-marker-camera preset='hiro'></a-marker-camera>
+  </a-scene>
+</body>
 </body>
 </html>
 
