--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 
-<body style='margin : 0px; overflow: hidden;'>
+<body style='margin : 10px; border: 10px solid green; overflow: hidden;'>
   <a-scene embedded arjs>
       
     <a-assets>
