--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 
     <a-entity gltf-model="##tree"></a-entity>
 
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-
-    <a-marker-camera preset='hiro'></a-marker-camera>
+    <!-- define your markers -->
+    <a-marker preset='hiro'>
+      <!-- here define the content to display on top of the marker -->
+      <a-box position='0 0.5 0' material='color: red;'></a-box>
+    </a-marker>
+    <!-- define a simple camera -->
+    <a-entity camera></a-entity>
   </a-scene>
 </body>
 </body>
