changed container sioze to fit window

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thunder</title>
+    <link rel="stylesheet" href="style/main.css">
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 
 
-<body style='margin : 10px; border: 10px solid green; overflow: hidden;'>
+<body style='margin : 10px; border: 10px solid green; '>
   <a-scene embedded arjs>
       
     <a-assets>
